# JellyNews

./: .gitignore  Dockerfile  LICENSE  bot.py  docker-compose.yml  graph_api.py  jellyfin.py  jellyfin_auth_store.py  main.py  pyproject.toml  send_mail.py  spy_on_mail.sh
jellynews/: bot.py  graph_api.py  jellyfin_auth_store.py  smtp.py
